fix spacing on ways to save h2 fix potential collision with location switcher.

--- a/app/webroot/css/screen.css
+++ b/app/webroot/css/screen.css
@@ -78,6 +78,7 @@ header { background:url(../img/header-background.png) top no-repeat; height:137p
 .layout-default.buildings.ways_to_save .main-menu a.ways-to-save,
 .layout-default.buildings.add .main-menu a.location,
 .layout-default.users.edit .main-menu a.profile { background-color: #fff }
+body.ways_to_save h2 { margin-top: 12px; width: 500px; }
 
 ul.menu { height:28px; list-style: none; padding: 0; float: left; }
 ul.menu li { float:left; }
